--- a/css/main.css
+++ b/css/main.css
@@ -973,12 +973,18 @@ img {
 
 .pages {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding-top: 12px;
-  padding-bottom: 12px;
+  padding-top: 32px;
+  padding-bottom: 32px;
   display: block;
   font-family: "Roboto";
   color: var(--bold-letters);
   font-weight: 500;
+}
+@media screen and (max-width: 767px) {
+  .pages {
+    padding-top: 12px;
+    padding-bottom: 12px;
+  }
 }
 @media screen and (max-width: 767px) {
   .pages {
@@ -993,10 +999,16 @@ img {
 }
 
 .current-pages {
-  padding-top: 12px;
-  padding-bottom: 12px;
+  padding-top: 32px;
+  padding-bottom: 32px;
   position: relative;
   color: var(--background-button-color);
+}
+@media screen and (max-width: 767px) {
+  .current-pages {
+    padding-top: 12px;
+    padding-bottom: 12px;
+  }
 }
 @media screen and (min-width: 768px) {
   .current-pages::after {
