--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -121,9 +121,13 @@ padding: 200px 0;
 
 .pages {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  padding-top: 12px;
+  padding-top: 32px;
+    padding-bottom: 32px;
+  @media screen and (max-width: 767px) {
+    padding-top: 12px;
   padding-bottom: 12px;
-  display: block;
+  }
+    display: block;
 
   font-family: "Roboto";
   color: var(--bold-letters);
@@ -146,8 +150,13 @@ padding: 200px 0;
 }
 
 .current-pages {
-  padding-top: 12px;
-  padding-bottom: 12px;
+padding-top: 32px;
+  padding-bottom: 32px;
+
+  @media screen and (max-width: 767px) {
+    padding-top: 12px;
+    padding-bottom: 12px;
+  }
   position: relative;
   color: var(--background-button-color);
 
